fix start-wrap height

--- a/styles.css
+++ b/styles.css
@@ -423,7 +423,7 @@ header {
 
 .start-wrap {
   width: 1600px;
-  height: 639;
+  height: 639px;
   margin: 0 auto;
   background-color: #ffffff;
   display: flex;
